[package]
name = "heartwood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.7.1"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage", "Event"]
version = "0.3.55"
